--- a/pySPACE/tests/.coveragerc
+++ b/pySPACE/tests/.coveragerc
@@ -1,5 +1,7 @@
 # .coveragerc to control coverage.py
 [run]
+include =
+    unittests/*
 branch = True
 data_file = cover.coverage
 
@@ -7,10 +9,10 @@ data_file = cover.coverage
 omit =
     # omit everything in /usr
     /usr/*
+    */__init__.py
 precision = 2
 show_missing = True
 ignore_errors = True
 
 [html]
 directory = coverage_html_report
-
